<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/cameraLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/cameraImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_camera" />

            <TextView
                android:id="@+id/cameraTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/galleryLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/galleryImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_gallery"
                tools:srcCompat="@drawable/ic_gallery" />

            <TextView
                android:id="@+id/galleryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vcLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/vcImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_video"
                tools:srcCompat="@drawable/ic_video" />

            <TextView
                android:id="@+id/vcTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/closeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/red_circle"
        android:padding="4dp"
        android:src="@drawable/ic_close" />
</LinearLayout>